# django_recipes

./: .coverage  .coveragerc  .env-example  .gitignore  Makefile  Pipfile  README.md  db.sqlite3  get-pip.py  pyproject.toml  pytest.ini  requirements.txt
authors/: forms.py  serializers.py  urls.py  validators.py  views.py
authors/forms/: __init__.py  login.py  recipe_create_form.py  recipe_form.py  register.py
authors/templates/authors/pages/: dashboard.html  dashboard_recipe.html  dashboard_recipe_create.html  login.html  register_view.html
authors/templates/authors/partials/: dashboard_menu.html  logout_message.html
authors/tests/: test_author_register_form.py
authors/views/: __init__.py  all.py  api.py  dashboard_recipe.py
core/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_category_alter_recipe_cover_and_more.py  0003_alter_recipe_cover.py
recipes/static/recipes/css/: styles.css
recipes/static/recipes/js/: scripts.js
recipes/templates/recipes/: home.html
recipes/templates/recipes/pages/: category.html  home.html  recipe_detail.html  search_page.html
recipes/tests/: recipe_base_test.py  test_recipe_models.py  test_recipe_url.py  test_recipe_views.py  test_recipes_category_views.py  test_recipes_detail_view.py  test_recipes_home_view.py  test_recipes_search_view.py
recipes/utils/: django_forms.py  factory.py  pagination.py  strings.py  test_pagination.py
recipes/views/: __init__.py  api.py  site.py
(+11 files in other folders)
