[tool.poetry]
name = "django_recipes"
version = "0.10"
description = ""
authors = ["deb-gama <gama.debora1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-django = "^4.5.2"
model-bakery = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
