[tool.poetry]
name = "django_recipes"
version = "0.10"
description = ""
authors = ["deb-gama <gama.debora1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest-django = "^4.5.2"
model-bakery = "^1.16.0"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
djangorestframework-simplejwt = "^5.3.0"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
Pillow = "^10.1.0"
Faker = "^19.11.0"
parameterized = "^0.9.0"
pytest-django-testing-postgresql = "^0.2"
black = "^23.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
